--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,7 @@
                 Get a preview of the output file.</div>
             <div>View All Macros: view all macro values that has already been saved so far.
                 (e.g. campaign_name, size, TTD AdgroupID, TTD CampaignID )</div>
+            <div>Please "Enable Editing" --> "Save" the excel file before upload the spreadsheet for uploading creatives.</div>
       </div>
     </div>
 </div>
