add clean function

--- a/templates/chooseFile.html
+++ b/templates/chooseFile.html
@@ -68,6 +68,10 @@
                 <input type="submit" value='Save' />
                 <!-- <input type="submit" value='Save' onclick="return validateForm()"/> -->
                 <div></div>
+                <p></p>
+                <a href="/empty" >
+                    <button class="styled"type="button">clean all rules& files history</button>
+                </a>
                 <p>Selected files:</p>
                 <div id="fileList"></div>
             </form>
