--- a/templates/submitted.html
+++ b/templates/submitted.html
@@ -21,6 +21,8 @@
             </tr>
         {% endfor %}
     </table>
-    <a href="/output" target="_blank">Download Results</a>
+    <a href="/output" target="_blank">Step1: Download Results</a>
+    <p>
+    <a href="/download_zip" target="_blank">Step2: Download renamed creatives in zip file</a>
 </body>
 </html>
