--- a/templates/CampaignName.html
+++ b/templates/CampaignName.html
@@ -21,9 +21,7 @@
             <li><a href="#"><i class="fa-solid fa-list-ol"></i>Campaign ID</a></li>
             <li><a href="/CampaignName"><i class="fas fa-address-card"></i>Campaign Name</a></li>
             <li><a href="/chooseFile"><i class="fa-solid fa-image"></i>Creative File</a></li>
-            <!--<li><a href="CreativeSetting"><i class="fa-solid fa-scale-balanced"></i>Rules</a></li>-->
             <li><a href="/viewMacros"><i class="fa-sharp fa-solid fa-eye"></i>View All Macros</a></li>
-            <!--<li><a href="#"><i class="fa-sharp fa-solid fa-file-export"></i>Output</a></li>-->
         </ul>
     </div>
     <div class="main_content">
@@ -33,7 +31,7 @@
                 <table>
                     <tr>
                         <td>Name:</td>
-                        <td><input type="text" name="campaign_name" value="{{campaign_name_macro['value']}}"></td>
+                        <td><input type="text" name="campaign_name" value="{{session['campaignName']}}"></td>
                     </tr>
                     <tr>
                         <td>CampaignMacro:</td>
