--- a/templates/chooseFile.html
+++ b/templates/chooseFile.html
@@ -39,7 +39,6 @@
     </script>
 </head>
 <body>
-
 <div class="wrapper">
     <div class="sidebar">
 
@@ -49,11 +48,11 @@
 					<img src="static/TTD_BIG.png" alt="logo"></a>
         </div>
         <ul>
-             <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-            <li><a href="#"><i class="fa-solid fa-list-ol"></i>Campaign ID</a></li>
-            <li><a href="/CampaignName"><i class="fas fa-address-card"></i>Campaign Name</a></li>
-            <li><a href="/chooseFile"><i class="fa-solid fa-image"></i>Creative File</a></li>
-<!--            <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>-->
+            <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
+            <li><a href="/CampaignName"><i class="fa-solid fa-image"></i>Setup Template</a></li>
+<!--            <li><a href="/"><i class="fa-solid fa-list-ol"></i>Campaign ID</a></li>-->
+<!--            <li><a href="/CampaignName"><i class="fas fa-address-card"></i>Campaign Name</a></li>-->
+<!--            <li><a href="/chooseFile"><i class="fa-solid fa-image"></i>Creative File</a></li>-->
             <!--<li><a href="CreativeSetting"><i class="fa-solid fa-scale-balanced"></i>Rules</a></li>-->
             <li><a href="/viewMacros"><i class="fa-sharp fa-solid fa-eye"></i>View All Macros</a></li>
             <!--<li><a href="#"><i class="fa-sharp fa-solid fa-file-export"></i>Output</a></li>-->
