--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RTBAsia Tools</title>
+    <title>Creative Automation Tools</title>
     <link rel="stylesheet" href="static/styles.css">
     <!--    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">-->
     <script src="{{ url_for('static', filename='28adb9f300.js') }}" crossorigin="anonymous"></script>
@@ -39,9 +39,10 @@
         </div>
         <ul>
             <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
-            <li><a href="/"><i class="fa-solid fa-list-ol"></i>Campaign ID</a></li>
-            <li><a href="/CampaignName"><i class="fas fa-address-card"></i>Campaign Name</a></li>
-            <li><a href="/chooseFile"><i class="fa-solid fa-image"></i>Creative File</a></li>
+            <li><a href="/CampaignName"><i class="fa-solid fa-image"></i>Setup Template</a></li>
+<!--            <li><a href="/"><i class="fa-solid fa-list-ol"></i>Campaign ID</a></li>-->
+<!--            <li><a href="/CampaignName"><i class="fas fa-address-card"></i>Campaign Name</a></li>-->
+<!--            <li><a href="/chooseFile"><i class="fa-solid fa-image"></i>Creative File</a></li>-->
             <!--<li><a href="CreativeSetting"><i class="fa-solid fa-scale-balanced"></i>Rules</a></li>-->
             <li><a href="/viewMacros"><i class="fa-sharp fa-solid fa-eye"></i>View All Macros</a></li>
             <!--<li><a href="#"><i class="fa-sharp fa-solid fa-file-export"></i>Output</a></li>-->
@@ -50,16 +51,22 @@
     <div class="main_content">
         <div class="header">Welcome to Tracking Creation Assistant.</div>
         <div class="info">
-            <div>Instruction:</div>
-            <div>Campaign ID: Look up campaign name by campaign ID in TTD API.</div>
-            <div>Campaign Name: Set up Campaign name and its macro</div>
-            <div>Creative File: Choose creative files to upload,
-                set naming convention and rules for the chosen files, get "Name",
-                "landing page URl", "Click through URL" for creative upload file.
-                Get a preview of the output file.</div>
+            <div><p>Instruction:</p></div>
+<!--            <div>Campaign ID: Look up campaign name by campaign ID in TTD API.</div>-->
+<!--            <div>Campaign Name: Set up Campaign name and its macro</div>-->
+<!--            <div>Creative File: Choose creative files to upload,-->
+<!--                set naming convention and rules for the chosen files, get "Name",-->
+<!--                "landing page URl", "Click through URL" for creative upload file.-->
+<!--                Get a preview of the output file.</div>-->
+            <div>Setup Template: </div>
+            <div>1.type Campaign Name --></div>
+            <div>2.choose creative files to upload--></div>
+            <div>3.type Creative Rule --></div>
+            <div>4.download result template spreadsheet--></div>
+            <div>5.download renamed creatives in zip file.</div>
             <div>View All Macros: view all macro values that has already been saved so far.
                 (e.g. campaign_name, size, TTD AdgroupID, TTD CampaignID )</div>
-            <div>Please "Enable Editing" --> "Save" the excel file before upload the spreadsheet for uploading creatives.</div>
+            <div><p>Please "Enable Editing" --> "Save" the excel file before upload the spreadsheet for uploading creatives.</p></div>
       </div>
     </div>
 </div>
