引入秒针监测代码而做的功能开发1
1、增加跳过创意文件上传步骤，为了兼容先出配置但没有创意文件的场景
2、增加秒针类，用于处理秒针配置文件的加载和设置
3、增加了在设置规则时候，上传秒针监测代码的功能

--- a/templates/CreativeSetting.html
+++ b/templates/CreativeSetting.html
@@ -133,7 +133,16 @@
                     <tr>
                         <td colspan="2" style="padding: 10px 0 10px">
                             <input type="hidden" value="{{cn}}">
-                            <input type="button" value="Add Settings" onclick="combine_checkboxes()">
+                            <input type="button" value="Add Rule" onclick="combine_checkboxes()">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" style="padding: 10px 0 10px">
+                            <p>Set rules from 3rd party tracking file:</p>
+                            <form method="post" action="/fileUpload" enctype="multipart/form-data">
+                                <input type="file" id="upload_outside_file" name="upload_outside_file"  onchange="load_miaozhen_tracking_file()" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" value="Load Miaozhen Tracking File" >
+                            </form>
+
                         </td>
                     </tr>
                 </table>
