--- a/templates/chooseFile.html
+++ b/templates/chooseFile.html
@@ -50,12 +50,9 @@
         <ul>
             <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="/CampaignName"><i class="fa-solid fa-image"></i>Setup Template</a></li>
-<!--            <li><a href="/"><i class="fa-solid fa-list-ol"></i>Campaign ID</a></li>-->
-<!--            <li><a href="/CampaignName"><i class="fas fa-address-card"></i>Campaign Name</a></li>-->
-<!--            <li><a href="/chooseFile"><i class="fa-solid fa-image"></i>Creative File</a></li>-->
-            <!--<li><a href="CreativeSetting"><i class="fa-solid fa-scale-balanced"></i>Rules</a></li>-->
+
             <li><a href="/viewMacros"><i class="fa-sharp fa-solid fa-eye"></i>View All Macros</a></li>
-            <!--<li><a href="#"><i class="fa-sharp fa-solid fa-file-export"></i>Output</a></li>-->
+
         </ul>
     </div>
     <div class="main_content">
@@ -64,8 +61,6 @@
             <p>Click on the "Choose File" button to upload a file:</p>
             <form method="post" action="/fileUpload" enctype="multipart/form-data">
                 <input type="file" id="myFile" name="files" multiple="multiple"  onchange="updateList()" accept="image/*" >
-
-                <!-- <input type="submit" value='Save' onclick="return validateForm()"/> -->
                 <div></div>
                 <p></p>
                 <a href="/empty" >
@@ -74,8 +69,12 @@
                 <p>Selected files:</p>
                 <div id="fileList"></div>
                 <input type="submit" value='Upload'>
-            </form>
 
+            </form>
+            <br>
+            <form method="post" action="/skip_fileUpload" >
+                <input type="submit" value='Skip'>
+            </form>
         </div>
     </div>
 </div>
