--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,8 @@
         <h2>Automation Tools</h2>
         <div class="logo_wrap">
 				<a href="#">
-					<img src="static/TTD_BIG.png" alt="logo"></a>
+					<img src="static/TTD_BIG.png" alt="logo">
+                </a>
         </div>
         <ul>
             <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
