--- a/templates/chooseFile.html
+++ b/templates/chooseFile.html
@@ -93,7 +93,7 @@
                 </form>
             </div>
             <div style="border-radius: 25px; position:relevant; top:20px; left: 20px; border: solid 1px #888; padding: 20px 20px; width: 45% ">
-                <p>Setup from Miaozhen traking file</p><br>
+                <p>Setup from Miaozhen tracking file</p><br>
                 <form method="post" id="outside_file_form" action="/miaozhenfileUpload" enctype="multipart/form-data" >
                     <input type="file" id="miaozhen_file" name="upload_outside_file"  accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" onchange="updatemiaozhenfile()"  >
                     <div id="miaozhen_fileList" style="display:none" >
